[package]
edition = "2021"
name = "lsm"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam-skiplist = "0.1"
bytes = "1"
anyhow = "1"
crc32fast = "1"
moka = "0.9"
ouroboros = "0.18"
farmhash = "1"
serde = { version = "1.0", features = ["derive"]}
serde_json ={ version = "1.0" }
parking_lot = "0.12"
rustyline = "14.0.0"
nom = "7.1.3"

[[bin]]
name = "lsm-cli"
path = "src/bin/lsm-cli.rs"

[[bin]]
name = "wrapper"
path = "src/bin/wrapper.rs"